# cton-sdk

./: .gitignore  API_DOCUMENTATION.md  CNAME  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TODO.md  build.bat  build_all.bat  build_all.sh  build_cpp.bat  build_cpp.sh  build_java.bat  build_java.sh  install_openssl.bat  pom.xml  styles.css
.github/workflows/: publish.yml  website.yml
api-client/: build.bat  pom.xml
contract/: build.bat  pom.xml
cpp/: CMakeLists.txt  chacha20_debug_test.cpp  chacha20_double_encrypt_test.cpp  chacha20_java_mimic_exact_test.cpp  chacha20_java_mimic_test.cpp  chacha20_jna_test.cpp  chacha20_simple_test.cpp  chacha20_test.cpp  debug_test.cpp  dll_test.cpp  jna_debug_test.cpp  openssl_chacha20_test.cpp  sha256_test.cpp  test_crypto.cpp  test_openssl.cpp
cpp/include/: Address.h  Boc.h  Cell.h  Crypto.h  Mnemonic.h  NativeInterface.h
cpp/src/: Address.cpp  Boc.cpp  Cell.cpp  Crypto.cpp  Mnemonic.cpp  NativeInterface.cpp  demo.cpp  main.cpp
cpp/test/: AddressTest.cpp  BenchmarkTest.cpp  Bip39ComplianceTest.cpp  BocComplianceTest.cpp  BocPerformanceTest.cpp  BocTest.cpp  CellTest.cpp  ComprehensiveTest.cpp  CryptoAlgorithmsTest.cpp  CryptoSecurityTest.cpp  CryptoTest.cpp  Ed25519Test.cpp  IntegrationTest.cpp  MnemonicTest.cpp  NativeInterfaceTest.cpp  TestFramework.h  build_and_run_test.bat  run_all_tests.bat
examples/: AddressExample.java  CryptoAlgorithmsExample.java  CryptoExample.java  FullCryptoExample.java  MnemonicExample.java  SimpleTransfer.java  pom.xml
java/: pom.xml
openssl-3.6.0/: Makefile.in  OpenSSLConfig.cmake  builddata.pm  configdata.pm  installdata.pm  libcrypto-3-x64.dll.args  libcrypto.pc  libssl-3-x64.dll.args  libssl.pc  openssl.pc
openssl-3.6.0/apps/: openssl-bin-asn1parse.d  openssl-bin-ca.d  openssl-bin-ciphers.d  openssl-bin-cmp.d  openssl-bin-cms.d  openssl-bin-configutl.d  openssl-bin-crl.d  openssl-bin-crl2pkcs7.d  openssl-bin-dgst.d  openssl-bin-dhparam.d  openssl-bin-dsa.d  openssl-bin-dsaparam.d  openssl-bin-ec.d  openssl-bin-ecparam.d  openssl-bin-enc.d  openssl-bin-engine.d  openssl-bin-errstr.d  openssl-bin-fipsinstall.d  openssl-bin-gendsa.d  openssl-bin-genpkey.d  openssl-bin-genrsa.d  openssl-bin-info.d  openssl-bin-kdf.d  openssl-bin-list.d  openssl-bin-mac.d  openssl-bin-nseq.d  openssl-bin-ocsp.d  openssl-bin-openssl.d  openssl-bin-passwd.d  openssl-bin-pkcs12.d  openssl-bin-pkcs7.d  openssl-bin-pkcs8.d  openssl-bin-pkey.d  openssl-bin-pkeyparam.d  openssl-bin-pkeyutl.d  openssl-bin-prime.d  openssl-bin-rand.d  openssl-bin-rehash.d  openssl-bin-req.d  openssl-bin-rsa.d  (+15 more)
openssl-3.6.0/crypto/: buildinf.h  libcrypto-lib-array_alloc.d  libcrypto-lib-comp_methods.d  libcrypto-lib-context.d  libcrypto-lib-core_algorithm.d  libcrypto-lib-core_fetch.d  libcrypto-lib-core_namemap.d  libcrypto-lib-cversion.d  libcrypto-lib-defaults.d  libcrypto-lib-deterministic_nonce.d  libcrypto-lib-indicator_core.d  libcrypto-lib-info.d  libcrypto-lib-init.d  libcrypto-lib-initthread.d  libcrypto-lib-mem.d  libcrypto-lib-o_str.d  libcrypto-lib-params.d  libcrypto-lib-params_dup.d  libcrypto-lib-params_from_text.d  libcrypto-lib-passphrase.d  libcrypto-lib-provider.d  libcrypto-lib-provider_child.d  libcrypto-lib-provider_conf.d  libcrypto-lib-provider_core.d  libcrypto-lib-sleep.d  libcrypto-lib-ssl_err.d  libcrypto-lib-threads_common.d  libcrypto-lib-threads_none.d  libcrypto-lib-threads_pthread.d  libcrypto-lib-threads_win.d  libcrypto-lib-time.d  libcrypto-shlib-array_alloc.d  libcrypto-shlib-comp_methods.d  libcrypto-shlib-context.d  libcrypto-shlib-core_algorithm.d  libcrypto-shlib-core_fetch.d  libcrypto-shlib-core_namemap.d  libcrypto-shlib-cversion.d  libcrypto-shlib-defaults.d  libcrypto-shlib-deterministic_nonce.d  (+25 more)
openssl-3.6.0/engines/: capi-dso-e_capi.d  dasync-dso-e_dasync.d  e_padlock-x86_64.s  libcrypto-lib-e_capi.d  libcrypto-lib-e_padlock.d  loader_attic-dso-e_loader_attic.d  ossltest-dso-e_ossltest.d  padlock-dso-e_padlock.d
openssl-3.6.0/exporters/: libcrypto.pc  libssl.pc  openssl.pc
openssl-3.6.0/fuzz/: acert-test-bin-acert.d  acert-test-bin-test-corpus.d  asn1-test-bin-asn1.d  asn1-test-bin-fuzz_rand.d  asn1parse-test-bin-asn1parse.d  client-test-bin-client.d  client-test-bin-fuzz_rand.d  cmp-test-bin-cmp.d  cmp-test-bin-fuzz_rand.d  cms-test-bin-cms.d  crl-test-bin-crl.d  ct-test-bin-ct.d  decoder-test-bin-decoder.d  decoder-test-bin-fuzz_rand.d  dtlsclient-test-bin-dtlsclient.d  dtlsclient-test-bin-fuzz_rand.d  dtlsclient-test-bin-test-corpus.d  dtlsserver-test-bin-dtlsserver.d  dtlsserver-test-bin-fuzz_rand.d  dtlsserver-test-bin-test-corpus.d  hashtable-test-bin-fuzz_rand.d  hashtable-test-bin-hashtable.d  hashtable-test-bin-test-corpus.d  ml-dsa-test-bin-fuzz_rand.d  ml-dsa-test-bin-ml-dsa.d  ml-dsa-test-bin-test-corpus.d  ml-kem-test-bin-fuzz_rand.d  ml-kem-test-bin-ml-kem.d  ml-kem-test-bin-test-corpus.d  pem-test-bin-pem.d  provider-test-bin-provider.d  provider-test-bin-test-corpus.d  quic-client-test-bin-fuzz_rand.d  quic-client-test-bin-quic-client.d  quic-lcidm-test-bin-fuzz_rand.d  quic-lcidm-test-bin-quic-lcidm.d  quic-lcidm-test-bin-test-corpus.d  quic-rcidm-test-bin-fuzz_rand.d  quic-rcidm-test-bin-quic-rcidm.d  quic-rcidm-test-bin-test-corpus.d  (+15 more)
openssl-3.6.0/providers/: legacy-dso-legacyprov.d  libcrypto-lib-baseprov.d  libcrypto-lib-defltprov.d  libcrypto-lib-nullprov.d  libcrypto-lib-prov_running.d  libcrypto-shlib-baseprov.d  libcrypto-shlib-defltprov.d  libcrypto-shlib-nullprov.d  libcrypto-shlib-prov_running.d  liblegacy-lib-prov_running.d
openssl-3.6.0/ssl/: libssl-lib-bio_ssl.d  libssl-lib-d1_lib.d  libssl-lib-d1_msg.d  libssl-lib-d1_srtp.d  libssl-lib-methods.d  libssl-lib-pqueue.d  libssl-lib-s3_enc.d  libssl-lib-s3_lib.d  libssl-lib-s3_msg.d  libssl-lib-ssl_asn1.d  libssl-lib-ssl_cert.d  libssl-lib-ssl_cert_comp.d  libssl-lib-ssl_ciph.d  libssl-lib-ssl_conf.d  libssl-lib-ssl_err_legacy.d  libssl-lib-ssl_init.d  libssl-lib-ssl_lib.d  libssl-lib-ssl_mcnf.d  libssl-lib-ssl_rsa.d  libssl-lib-ssl_sess.d  (+40 more)
website/: index.html  script.js  styles.css
(+1560 files in other folders)
